# Codebase-explainer-backend

./: README.md  main.py  pyproject.toml  query_db.py
api/: query_api.py  upload_api.py
langgraph_agent/: agents.py  graph.py  prompts.py  tools.py
models/: api_response_model.py  chroma_model.py  code_chunk_model.py  query_model.py  upload_model.py
repositories/: chroma_repository.py
services/: code_chunk_service.py  query_service.py  upload_service.py
utils/: contants.py
